--- a/css/partials/_phones.scss
+++ b/css/partials/_phones.scss
@@ -17,6 +17,12 @@
     border-radius: 5px;
     padding: 5px;
   }
+
+  &:hover {
+    .withBorder {
+      border: 2px dashed darken($minor1-color, 10%);
+    }
+  }
 }
 
 .linkHeader {
@@ -86,43 +92,50 @@
     font-weight: bold;
   }
 }
-.note_location{/////////////bug with 620 - 797 media
+
+.note_location {/////////////bug with 620 - 797 media
   position: relative;
 }
 
-.note_phones{/////////////
+.note_phones {/////////////
   position: absolute;
   left: -230px;
   top: 230px;
 }
-
 //////////////PHOTO LEF CORNER
-
-.main_wrapper__phones{
+.main_wrapper__phones {
   position: absolute;
   top: 0;
   left: -25px;
   transform: rotate(-12deg);
   z-index: 100;
-  .pin.er{
+
+  .pin.er {
     top: -25px;
     left: 30px;
   }
 }
 
-.tilt{//PHONES used
+.tilt {
+  //PHONES used
   transform: rotate(1deg);
 }
-.tilt2{/////used
+
+.tilt2 {
+  /////used
   transform: rotate(-3deg);
 }
-.tilt3{
+
+.tilt3 {
   transform: rotate(1deg);
 }
-.tilt4{
+
+.tilt4 {
   // transform: rotate();
 }
-.pin.pin_1.main_wrapper__pin{/////////////////////////PIN MAIN WRAPPER
+
+.pin.pin_1.main_wrapper__pin {
+  /////////////////////////PIN MAIN WRAPPER
   top: 195px;
   left: 3px;
   transform: rotate(30deg);
@@ -153,21 +166,21 @@
     margin: 0 0 20px;
   }
   ///PHOTO/////////////////////////////////
-  .phone_photo{
-    width:160px;
+  .phone_photo {
+    width: 160px;
     height: auto;
   }
 }
 /////////////
 @media only screen and (min-width: 624px) and (max-width: 794px) {
   //  .phoneWrapper {
-    //  width: 90vw;bug bug bug
+  //  width: 90vw;bug bug bug
   //  }
-  .note_phones{
+  .note_phones {
     left: -15px;
     top: -50px;
   }
- }
+}
 @media only screen and (min-width:624px) and (max-width:1280px) {
   .phoneLinks {
     width: 100%;
